# elite-decision-engine

./: .continuerc.json  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_REPORT.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_SCORE.md  ATLAS_REPORT.md  BETA_CHECKLIST.md  BETA_RELEASE_REPORT.md  CLAUDE.md  DASHBOARD_ARCHITECTURE.md  DEPENDENCY_AUDIT.md  DEPENDENCY_GRAPH.md  Dockerfile  Dockerfile.arm64  Dockerfile.prod  ENGINEERING_REPORT.md  EPIC_01_REPORT.md  EPIC_02_REPORT.md  EPIC_03_REPORT.md  EPIC_04_REPORT.md  EPIC_05_REPORT.md  EPIC_06_REPORT.md  EPIC_07_REPORT.md  EXECUTIVE_SUMMARY.md  FINAL_LIVE_DATA_AUDIT.md  FINAL_PRODUCTION_READINESS_REPORT.md  FINAL_SCORE.md  FIRST_TIME_USER_REPORT.md  FOUNDATION_FREEZE_REPORT.md  FOUNDER_ALPHA_READINESS.md  FOUNDER_ALPHA_REPORT.md  FOUNDER_ALPHA_SHOWCASE.md  FOUNDER_BETA_READINESS.md  FRONTEND_SPRINT1.md  Git  IMPROVEMENT_ROADMAP.md  INTEGRATION_GUIDE.md  (+102 more)
api/: __init__.py  app.py  cache.py  dependencies.py  errors.py  events.py  main.py  middleware.py  rate_limit.py  routes.py  schemas.py  websocket.py
auth/: jwt.py  models.py  permissions.py  service.py
cli/: __main__.py  commands.py  formatter.py
core/: __init__.py  cache.py  circuit_breaker.py  confidence_engine.py  dashboard.py  engine.py  health.py  health_check.py  intelligence.py  kill_switch.py  retry.py  scheduler.py  serialization.py  settings.py  validation.py  validator.py
council/: __init__.py  base.py  consensus.py  macro_agent.py  news_agent.py  risk_agent.py  technical_agent.py  trend_agent.py  whale_agent.py
dashboard/: metrics.py  (+2 more)
(+868 files in other folders)
